--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
                             <p class="help-block text-danger"></p>
                         </div>
                         <div class="text-center">
-                            <button class="btn btn-primary text-uppercase py-3 px-5" type="submit" id="sendMessageButton">Send Message</button>
+                            <button class="btn btn-primary text-uppercase py-3 px-5" type="submit" id="sendMessageButton">Envoyer un Message</button>
                         </div>
                     </form>
                 </div>
