--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
             <div class="col-lg-6 col-md-8 col-sm-10 px-0">
                 <div class="contact-form bg-white rounded p-5">
                     <div id="success"></div>
-                    <form name="sentMessage" id="contactForm" action="https://formsubmit.co/abdella.boutaarourt@email.com" method="POST">
+                    <form name="sentMessage" id="contactForm" action="https://formsubmit.co/abdella.boutaarourt@hotmail.com" method="POST">
                         <div class="form-row">
                             <div class="col-md-6">
                                 <div class="control-group">
@@ -350,7 +350,7 @@
                         <div class="text-center">
                             <button class="btn btn-primary text-uppercase py-3 px-5" type="submit" id="sendMessageButton">Envoyer un Message</button>
                         </div>
-                        
+
                     </form>
                 </div>
             </div>
@@ -409,8 +409,7 @@
     <script src="lib/lightbox/js/lightbox.min.js"></script>
 
     <!-- Contact Javascript File -->
-    <script src="mail/jqBootstrapValidation.min.js"></script>
-    <script src="mail/contact.js"></script>
+
 
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
