--- a/index.html
+++ b/index.html
@@ -133,9 +133,9 @@
             <div class="row portfolio-container">
                 <div class="col-lg-4 col-md-6 mb-4 portfolio-item first">
                     <div class="position-relative rounded overflow-hidden mb-2">
-                        <img class="img-fluid w-100" src="img/portfolio-1.jpg" alt="">
+                        <img class="img-fluid w-100" src="img/portofolio.png" alt="">
                         <div class="portfolio-btn d-flex align-items-center justify-content-center">
-                            <a href="img/portfolio-1.jpg" data-lightbox="portfolio">
+                            <a href="img/portofolio-1.PNG" data-lightbox="portfolio">
                                 <i class="fa fa-4x fa-plus text-primary"></i>
                             </a>
                         </div>
@@ -325,6 +325,8 @@
                 <div class="contact-form bg-white rounded p-5">
                     <div id="success"></div>
                     <form name="sentMessage" id="contactForm" action="04ef8d713364c8ff19dccb9047ae19e1" method="POST">
+                        <input type="text" name="_honey" style="display: none;">
+                        <input type="hidden" name="_captcha" value ="false">
                         <div class="form-row">
                             <div class="col-md-6">
                                 <div class="control-group">
