--- a/service.html
+++ b/service.html
@@ -78,34 +78,27 @@
     <!-- Services Start -->
     <div class="container-fluid py-5">
         <div class="container pt-5 pb-3">
-            <h1 class="display-4 text-uppercase text-center mb-5">Our Creative Services</h1>
+            <h1 class="display-4 text-uppercase text-center mb-5">NOS SERVICES</h1>
             <div class="row">
                 <div class="col-lg-3 mb-2">
                     <div class="service-item rounded p-5 mb-4">
                         <i class="fa fa-3x fa-laptop-code text-primary mb-4"></i>
-                        <h4 class="text-uppercase mb-4">Taille <span class="d-block text-body">Adaptée</span></h4>
-                        <p class="m-0">Un site qui s’adapte à toute taille d’écran pour conserver une ergonomie idéale en toute situation</p>
+                        <h4 class="text-uppercase mb-4">Web <span class="d-block text-body">Design</span></h4>
+                        <p class="m-0"> l'aspect graphique d'un site Internet (illustrations, animations, typographie...).</p>
                     </div>
                 </div>
                 <div class="col-lg-3 mb-2">
                     <div class="service-item rounded p-5 mb-4">
                         <i class="fa fa-3x fa-code text-primary mb-4"></i>
-                        <h4 class="text-uppercase mb-4">Web <span class="d-block text-body">Development</span></h4>
-                        <p class="m-0">Vero amet vero eos kasd justo ipsum diam sed elitr</p>
+                        <h4 class="text-uppercase mb-4">site <span class="d-block text-body">vitrine</span></h4>
+                        <p class="m-0">Le but? D'attirer l'attention et d'éveiller l'intérêt des internautes de passage.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 mb-2">
                     <div class="service-item rounded p-5 mb-4">
                         <i class="fa fa-3x fa-envelope-open-text text-primary mb-4"></i>
-                        <h4 class="text-uppercase mb-4">Digital <span class="d-block text-body">Marketing</span></h4>
-                        <p class="m-0">Vero amet vero eos kasd justo ipsum diam sed elitr</p>
-                    </div>
-                </div>
-                <div class="col-lg-3 mb-2">
-                    <div class="service-item rounded p-5 mb-4">
-                        <i class="fa fa-3x fa-edit text-primary mb-4"></i>
-                        <h4 class="text-uppercase mb-4">Content <span class="d-block text-body">Writing</span></h4>
-                        <p class="m-0">Vero amet vero eos kasd justo ipsum diam sed elitr</p>
+                        <h4 class="text-uppercase mb-4">Taille <span class="d-block text-body">Adaptée</span></h4>
+                        <p class="m-0">Un site qui s’adapte à toute taille d’écran pour conserver une ergonomie idéale en toute situation</p>
                     </div>
                 </div>
             </div>
@@ -122,50 +115,29 @@
                     <h1 class="m-0 mt-n2 text-white display-4">DEEVWEB</h1>
                 </a>
                 <p>Volup amet magna clita tempor. Tempor sea eos vero ipsum. Lorem lorem sit sed elitr sed kasd et</p>
-                <h6 class="text-uppercase text-white py-2">Follow Us</h6>
+                <h6 class="text-uppercase text-white py-2">SUIVEZ-NOUS</h6>
                 <div class="d-flex justify-content-start">
                     <a class="btn btn-lg btn-primary btn-lg-square mr-2" href="#"><i class="fab fa-twitter"></i></a>
                     <a class="btn btn-lg btn-primary btn-lg-square mr-2" href="#"><i class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-lg btn-primary btn-lg-square mr-2" href="#"><i class="fab fa-linkedin-in"></i></a>
                     <a class="btn btn-lg btn-primary btn-lg-square" href="#"><i class="fab fa-instagram"></i></a>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
                 <h4 class="text-uppercase text-white mb-4">Get In Touch</h4>
                 <p>Volup amet magna clita tempor. Tempor sea eos vero ipsum. Lorem lorem sit sed elitr sed kasd et</p>
-                <p><i class="fa fa-map-marker-alt text-white mr-2"></i>123 Street, New York, USA</p>
+                <p><i class="fa fa-map-marker-alt text-white mr-2"></i>Bruxelles,Belgique</p>
                 <p><i class="fa fa-phone-alt text-white mr-2"></i>+012 345 67890</p>
                 <p><i class="fa fa-envelope text-white mr-2"></i>info@example.com</p>
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
                 <h4 class="text-uppercase text-white mb-4">Quick Links</h4>
                 <div class="d-flex flex-column justify-content-start">
-                    <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right text-white mr-2"></i>Home</a>
-                    <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right text-white mr-2"></i>About Us</a>
-                    <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right text-white mr-2"></i>Our Services</a>
-                    <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right text-white mr-2"></i>Pricing Plan</a>
-                    <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right text-white mr-2"></i>Meet The Team</a>
-                    <a class="text-white-50" href="#"><i class="fa fa-angle-right text-white mr-2"></i>Contact Us</a>
+                    <a class="text-white-50 mb-2" href="index.html"><i class="fa fa-angle-right text-white mr-2"></i>Accueil</a>
+                    <a class="text-white-50 mb-2" href="service.html"><i class="fa fa-angle-right text-white mr-2"></i>Nos Services</a>
+                    <a class="text-white-50" href="contact.html"><i class="fa fa-angle-right text-white mr-2"></i>Contactez-nous</a>
                 </div>
-            </div>
-            <div class="col-lg-3 col-md-6 mb-5">
-                <h4 class="text-uppercase text-white mb-4">Newsletter</h4>
-                <p class="mb-4">Volup amet magna clita tempor. Tempor sea eos vero ipsum. Lorem lorem sit sed elitr sed kasd et</p>
-                <div class="w-100 mb-3">
-                    <div class="input-group">
-                        <input type="text" class="form-control border-light" style="padding: 25px;" placeholder="Your Email">
-                        <div class="input-group-append">
-                            <button class="btn btn-primary text-uppercase px-3">Sign Up</button>
-                        </div>
-                    </div>
-                </div>
-                <i>Lorem sit sed elitr sed kasd et</i>
             </div>
         </div>
-    </div>
-    <div class="container-fluid py-4 px-sm-3 px-md-5" style="background: #111111;">
-        <p class="mb-2 text-center text-white-50">&copy; <a href="#">Your Site Name</a>. All Rights Reserved.</p>
-        <p class="m-0 text-center text-white-50">Designed by <a href="https://htmlcodex.com">HTML Codex</a></p>
     </div>
     <!-- Footer End -->
 
