--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
             <div class="col-lg-6 col-md-8 col-sm-10 px-0">
                 <div class="contact-form bg-white rounded p-5">
                     <div id="success"></div>
-                    <form name="sentMessage" id="contactForm" action="abdella.boutaarourt@hotmail.com" method="POST">
+                    <form name="sentMessage" id="contactForm" action="https://formsubmit.co/abdella.boutaarourt@hotmail.com" method="POST">
                         <div class="form-row">
                             <div class="col-md-6">
                                 <div class="control-group">
