--- a/index.html
+++ b/index.html
@@ -325,6 +325,8 @@
                 <div class="contact-form bg-white rounded p-5">
                     <div id="success"></div>
                     <form name="sentMessage" id="contactForm" action="https://formsubmit.co/04ef8d713364c8ff19dccb9047ae19e1" method="POST">
+                        <input type="text" name="_honey" style="display: none;">
+                        <input type="hidden" name="_captcha" value="false">
                         <div class="form-row">
                             <div class="col-md-6">
                                 <div class="control-group">
