--- a/contact.html
+++ b/contact.html
@@ -91,7 +91,9 @@
             <div class="col-lg-6 col-md-8 col-sm-10 px-0">
                 <div class="contact-form bg-white rounded p-5">
                     <div id="success"></div>
-                    <form name="sentMessage" id="contactForm" action="04ef8d713364c8ff19dccb9047ae19e1" method="POST">
+                    <form name="sentMessage" id="contactForm" action="https://formsubmit.co/04ef8d713364c8ff19dccb9047ae19e1" method="POST">
+                        <input type="text" name="_honey" style="display: none;">
+                        <input type="hidden" name="_captcha" value="false">
                         <div class="form-row">
                             <div class="col-md-6">
                                 <div class="control-group">
