--- a/contact.html
+++ b/contact.html
@@ -64,7 +64,7 @@
 
 
     <!-- Page Header Start -->
-    <div class="page-header container-fluid bg-primary d-flex flex-column align-items-center justify-content-center">
+    <div class="page-header container-fluid bg-primary d-flex flex-column align-items-center justify-content-center finisher-header">
         <h1 class="display-3 text-uppercase mb-3">Contact</h1>
         <div class="d-inline-flex text-white">
             <h6 class="text-uppercase m-0"><a class="text-white" href="">Home</a></h6>
@@ -183,6 +183,7 @@
 
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
+    <script src="finisher-header.es5.min.js" type="text/javascript"></script>
 </body>
 
 </html>
