--- a/index.html
+++ b/index.html
@@ -62,9 +62,8 @@
     </div>
     <!-- Navbar End -->
 
-
     <!-- Header Start -->
-    <div class="container-fluid bg-primary py-5 px-0" style="margin-bottom: 90px;">
+    <div class="container-fluid bg-primary py-5 px-0 finisher-header" style="margin-bottom: 90px;">
         <div class="row mx-0 align-items-center">
             <div class="col-lg-6 px-md-5 text-center text-lg-left">
                 <h1 class="display-2 text-uppercase mb-3">Besoin d'un site web? <h2>Contactez-nous</h2></h1>
@@ -415,6 +414,7 @@
 
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
+    <script src="finisher-header.es5.min.js" type="text/javascript"></script>
 </body>
 
 </html>
